--- a/src/app/pages/usuario/usuario.component.html
+++ b/src/app/pages/usuario/usuario.component.html
@@ -1,3 +1,7 @@
+<div class="btns no-print">
+  <button onclick="window.print()" class="btn1">Imprimir</button>
+  <button (click)="volver()" class="btn2">Volver</button>
+</div>
 <div class="container">
   <encabezado />
   <estudiante [items]="registro" />
